fixed container overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,25 +6,27 @@
 
 body {
   font-size: x-large;
-  /* width: 100vw;
-  height: 100vh; */
+  font-family: 'Grenze Gotisch', cursive;
 }
 
 .game-container {
-  max-width: 100vw;
-  max-height: 100vh;
+  max-height: 95vh;
+  padding: 10px;
   display: grid;
   grid-template-rows: 80% 20%;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns:  3fr 2fr;
 }
 
 .score-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .letters-container {
+ grid-column: 2;
+  grid-row: 1/3;
   padding: 7px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -32,14 +34,15 @@ body {
 }
 
 .solution-container {
-  grid-column: 2;
   display: grid;
   justify-items: center;
-  text-align: center;
   align-items: center;
+  text-align: center;
+  height: max-content;
 }
 
 .letter {
+  font-family: 'Roboto', sans-serif;
   background-color: rgb(66, 184, 221);
   height: 40px;
   width: 40px;
@@ -58,7 +61,8 @@ body {
 }
 
 .hangman {
-  width: 90%;
+  
+  width: 100%;
   height: 90%;
   text-align: center;
 }
@@ -89,6 +93,10 @@ body {
   border-radius: 5px;
   box-shadow: 3px 3px gray;
   background-color: #2eb872;
+}
+
+.score{
+  width: 100%;
 }
 
 .mediumScore {
